# Old-Questions-Site

./: README.md  database.db  main.py  pyproject.toml  questions.json  requirements.txt  scrape.py  subjects.json  unitscrape.py  vercel.json
json/: ai.json  cn.json  daa.json  dbms.json  os.json  subjects.json  toc.json
questions_json/: AdvancedDatabase.json  AdvancedJavaProgramming.json  AdvancedNetworkingwithIPv6.json  AppliedLogic.json  ArtificialIntelligence.json  AutomationandRobotics.json  CProgramming.json  CognitiveScience.json  CompilerDesignandConstruction.json  ComputerArchitecture.json  ComputerGraphics.json  ComputerHardwareDesign.json  ComputerNetworks.json  Cryptography.json  DataStructuresandAlgorithms.json  DataWarehousingandDataMining.json  DatabaseAdministration.json  DatabaseManagementSystem.json  DecisionSupportSystemandExpertSystem.json  DesignandAnalysisofAlgorithms.json  DigitalLogic.json  DigitalSystemDesign.json  DiscreteStructures.json  DistributedNetworking.json  DistributedandObjectOrientedDatabase.json  E-Governance.json  E-commerce.json  EmbeddedSystemsProgramming.json  GameTechnology.json  GeographicalInformationSystem.json  ImageProcessing.json  InformationRetrieval.json  InternationalBusinessManagement.json  InternationalMarketing.json  Internship.json  IntroductiontoCloudComputing.json  IntroductiontoInformationTechnology.json  KnowledgeManagement.json  MathematicsI(Calculus).json  MathematicsII.json  (+25 more)
static/: bcaunitscript.js  marked.js  script.js  unitscript.js
templates/: ai.html  bcaindex.html  bcaunitwise.html  confusion.html  (+3 more)
(+76 files in other folders)
