[tool.poetry]
name = "old-questions-site"
version = "0.1.0"
description = ""
authors = ["shalin-devkota <shalin.devkota01@gmail.com>"]
readme = "README.md"
packages = [{include = "old_questions_site"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
