[tool.poetry]
name = "old-questions-site"
version = "0.1.0"
description = ""
authors = ["shalin-devkota <shalin.devkota01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
flask = "^2.3.2"
gunicorn = "^20.1.0"
bs4 = "^0.0.2"
simple-term-menu = "^1.6.4"
requests = "^2.32.3"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
